@@ -553,6 +553,15 @@ unedit_fileproc (callerdat, finfo)
     return 0;
 }
 
+static const char *const unedit_usage[] =
+{
+    "Usage: %s %s [-lR] [files...]\n",
+    "-l: Local directory only, not recursive\n",
+    "-R: Process directories recursively\n",
+    "(Specify the --help global option for a list of other help options)\n",
+    NULL
+};
+
 int
 unedit (argc, argv)
     int argc;
@@ -563,7 +572,7 @@ unedit (argc, argv)
     int err;
 
     if (argc == -1)
-	usage (edit_usage);
+	usage (unedit_usage);
 
     optind = 0;
     while ((c = getopt (argc, argv, "+lR")) != -1)
@@ -578,7 +587,7 @@ unedit (argc, argv)
 		break;
 	    case '?':
 	    default:
-		usage (edit_usage);
+		usage (unedit_usage);
 		break;
 	}
     }
